Fresh run of scripts to export to ansible

--- a/ansible-export/vars_dnf.yml
+++ b/ansible-export/vars_dnf.yml
@@ -45,11 +45,13 @@ dnf_packages:
   - "breeze-gtk-gtk2"
   - "breeze-icon-theme"
   - "brltty"
+  - "btop"
   - "btrfs-progs"
   - "bzip2"
   - "bzip2-libs"
   - "cairo"
   - "cairo-gobject"
+  - "capstone"
   - "cef"
   - "chrony"
   - "cifs-utils"
@@ -110,6 +112,7 @@ dnf_packages:
   - "ethtool"
   - "exfatprogs"
   - "expat"
+  - "fastfetch"
   - "fdk-aac-free"
   - "fedora-bookmarks"
   - "fedora-flathub-remote"
@@ -136,6 +139,7 @@ dnf_packages:
   - "fuse"
   - "fwupd"
   - "gamemode"
+  - "gcolor3"
   - "gdbm-libs"
   - "gdk-pixbuf2"
   - "ghostscript"
@@ -339,7 +343,10 @@ dnf_packages:
   - "libnsl"
   - "libogg"
   - "libpciaccess"
+  - "libpfm"
   - "libpng"
+  - "libportal"
+  - "libportal-gtk3"
   - "libproxy"
   - "libpsl"
   - "libqrcodegencpp"
@@ -474,6 +481,7 @@ dnf_packages:
   - "ntsync-autoload"
   - "nvidia-gpu-firmware"
   - "nvme-cli"
+  - "nvtop"
   - "nxpwireless-firmware"
   - "obs-studio"
   - "obs-studio-libs"
@@ -616,6 +624,7 @@ dnf_packages:
   - "tar"
   - "tcpdump"
   - "teamd"
+  - "tesseract"
   - "thermald"
   - "time"
   - "tiwilink-firmware"
@@ -651,6 +660,7 @@ dnf_packages:
   - "xfsprogs"
   - "xwaylandvideobridge"
   - "xz-libs"
+  - "yyjson"
   - "zint"
   - "zint-qt"
   - "zip"
